--- a/src/style/Volet.scss
+++ b/src/style/Volet.scss
@@ -15,6 +15,7 @@
         height: 50px;
         padding: 0 1%;
         border-radius: 5px;
+        cursor: pointer;
 
         h3 {
             color: white;
